Bug 12657 - binutils use __pid_t instead of pid_t
Summary: binutils use __pid_t instead of pid_t
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.22
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-08 23:10 UTC by Valentin Ochs
Modified: 2018-08-06 16:41 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
use pid_t instead of __pid_t (160 bytes, patch)
2011-04-08 23:10 UTC, Valentin Ochs
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Valentin Ochs 2011-04-08 23:10:10 UTC
Created attachment 5657 [details]
use pid_t instead of __pid_t

When trying to compile binutils with the musl libc [1], compilation fails because bfd/hosts/x86-64linux.h uses __pid_t instead of pid_t. Patching this is trivial, but annoying, and the author of musl said that he's 'not willing to add reserved-namespace type aliases to support broken applications that should be using the correct public type names.'

The attached patch includes a fix.

[1] http://www.etalabs.net/musl/
Comment 1 Sourceware Commits 2011-04-09 14:26:17 UTC
CVSROOT:	/cvs/src
Module name:	src
Changes by:	hjl@sourceware.org	2011-04-09 14:26:14

Modified files:
	bfd            : ChangeLog 
	bfd/hosts      : x86-64linux.h 

Log message:
	Replace __pid_t with pid_t.
	
	2011-04-09  H.J. Lu  <hongjiu.lu@intel.com>
	
	PR binutils/12657
	* hosts/x86-64linux.h (elf_prstatus32): Replace __pid_t with
	pid_t.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/src/bfd/ChangeLog.diff?cvsroot=src&r1=1.5294&r2=1.5295
http://sourceware.org/cgi-bin/cvsweb.cgi/src/bfd/hosts/x86-64linux.h.diff?cvsroot=src&r1=1.2&r2=1.3
Comment 2 Tom Tromey 2018-08-06 16:41:36 UTC
Fixed a while ago.